--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prepare": "husky install",
     "build": "babel src --out-dir dist --copy-files",
     "test": "jest"
   },
@@ -14,6 +15,8 @@
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "eslint": "^8.56.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0"
   }
 }
